--- a/artifacts/zabbix/zabbix_agent_install.yml
+++ b/artifacts/zabbix/zabbix_agent_install.yml
@@ -22,7 +22,7 @@
     when: ansible_os_family == "Debian"
 
   - name: Yum install Zabbix release in RHEL or CentOS
-    yum: name=http://repo.zabbix.com/zabbix/3.0/rhel/{{ ansible_distribution_version.split('.')[0] }}/x86_64/zabbix-release-3.0-1.el{{ ansible_distribution_version.split('.')[0] }}.noarch.rpm
+    yum: name=http://repo.zabbix.com/zabbix/3.0/rhel/{{ ansible_distribution_major_version }}/x86_64/zabbix-release-3.0-1.el{{ ansible_distribution_major_version }}.noarch.rpm
     when: ansible_os_family == "RedHat"
 
   - name: Apt install Zabbix agent
