--- a/examples/galaxy_elastic_cluster.yaml
+++ b/examples/galaxy_elastic_cluster.yaml
@@ -81,3 +81,7 @@ topology_template:
             type: linux 
             #distribution: scientific 
             #version: 6.6
+
+  outputs:
+    galaxy_url:
+      value: { concat: [ 'http://', get_attribute: [ torque_server, public_address, 0 ], ':8080' ] }
