--- a/artifacts/mesos/mesos_master_install.yml
+++ b/artifacts/mesos/mesos_master_install.yml
@@ -66,6 +66,9 @@
   - name: Install python-consul
     pip:  name=python-consul  state=present
 
+  - name: Install mesos-consul dependency
+    pip:  name=httplib2  state=present
+
   ##############################
   #       INSTALL DNSMASK      #
   ##############################
