--- a/artifacts/mesos/mesos_master_lb_start.yml
+++ b/artifacts/mesos/mesos_master_lb_start.yml
@@ -1,3 +1,3 @@
 - tasks:
-  - name: Start Slave Load Balancer
-    debug: msg="Start Slave Load Balancer"
+  - name: Start Master Load Balancer
+    debug: msg="Start Master Load Balancer"
