--- a/artifacts/mesos/mesos_slave_lb_start.yml
+++ b/artifacts/mesos/mesos_slave_lb_start.yml
@@ -1,3 +1,3 @@
 - tasks:
-  - name: Start Load Balancer
-    debug: msg="Start Load Balancer"
+  - name: Start Slave Load Balancer
+    debug: msg="Start Slave Load Balancer"
